--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "prettier": "^2.5.1",
     "typescript": "~4.6.3",
     "vite": "^2.9.1",
-    "vue-tsc": "^0.33.9"
+    "axios": "^0.26.1",
+    "element-plus": "^2.1.4",
+    "netlify-cli": "^9.15.0",
+    "qs": "^6.10.3",
+    "short-uuid": "^4.2.0"
   }
 }
